Lighthouse CSS Contrast Correction

--- a/chamber/styles/small.css
+++ b/chamber/styles/small.css
@@ -307,7 +307,6 @@ form {
 
     h3 {
         font-size: .9rem;
-        color: #E07A5F;
         margin: 1.5rem 0 .2rem 0;
         border-bottom: 1px solid #eee;
     }
@@ -356,6 +355,14 @@ form {
         cursor: pointer;
     }
 
+    input[type=radio] {
+
+        margin: 10px;
+        padding: 5px;
+    }
+
+
+
     input[type=submit]:hover {
         background-color: #c31a2b;
     }
@@ -386,14 +393,16 @@ form {
 button {
     border-radius: 10px;
     padding: 10px 20px;
-    background-color: #DF061D;
+    background-color: black;
     color: white;
     border: none;
     cursor: pointer;
+    font-weight: bold;
+    
 }
 
 button:hover {
-    background-color: #c31a2b;
+    background-color: #555;
    
 }
 
